src/test/deca/syntax/parser/invalid/instance_of_number.deca
// Test parser, instanceof doit prendre un IDENT, ici on a un nombre

{
    x instanceof 14;
}